# fleetman

./: .gitignore  .sync  Cargo.toml  LAUNCHER.md  LICENSE  NOTICE  README.md  agent_config.example.yaml  askama.toml  controller_config.example.yaml  supervisor.conf.example.template  systemd.service.example.template
service_templates/: pm.service.yml.template  run.sh.template  systemd.service.template
src/: agent_config.rs  agent_main.rs  agent_s3.rs  agent_state.rs  controller_config.rs  controller_main.rs  controller_s3.rs  processmaster_client.rs  s3_retry.rs
src/launcher/: main.rs
templates/: add_cell.html  agents.html  base.html  bucket_browse.html  bucket_folder_delete_preview.html  bucket_folder_delete_result.html  bucket_object_edit.html  buckets.html  cell_overrides.html  cell_version_view.html  cell_versions.html  cells.html  cleanup_deployment.html  create_deployment.html  dashboard.html  deployments.html  edit_cell_override.html  edit_file.html  edit_manifest.html  edit_resource_profile.html  login.html  manifests.html  recycle_bin.html  recycle_clear.html  resource_profiles.html  view_deployment.html
