[package]
name = "fleetman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fleetman"
path = "src/controller_main.rs"

[[bin]]
name = "fleetagent"
path = "src/agent_main.rs"

[[bin]]
name = "launcher"
path = "src/launcher/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-smithy-types = "1.0"
aws-credential-types = "1.0"
bytes = "1.5"
md5 = "0.7"
tempfile = "3.8"
anyhow = "1.0"
hex = "0.4"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2"
indexmap = { version = "2.0", features = ["serde"] }
axum = { version = "0.7", features = ["multipart"] }
axum-extra = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
askama = "0.12"
askama_axum = "0.4"
futures = "0.3"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
users = "0.11"
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"
base64 = "0.22"
pidfd = "0.2.4"
flate2 = "1.0"
signal-hook = "0.3"
